--- a/app/resource/Credits.html
+++ b/app/resource/Credits.html
@@ -15,16 +15,20 @@
 <b>Donors</b> : <i>Many thanks go to all those who have been kind enough to donate money in support of this project:</i><br><br>
 4LE Media, L.L.C.<br>
 Anonymous x1<br>
+Anthony Giusti<br>
 Barton Poulson<br>
 Bree Lassen<br>
 Carles Escudero Diaz<br>
 Chen Yap<br>
+Christine Billings<br>
+Connie Spencer<br>
 David Bluestone<br>
 David Hirsh<br>
 Denny Forster<br>
 Edgar Kraus<br>
 Gregory A Petsko<br>
 Gregory Pitta<br>
+Hans Henningsson<br>
 Howard Katz<br>
 Jan Wade<br>
 Jean-Guy Niquet<br>
@@ -40,6 +44,7 @@ Leslie Layton<br>
 Li Lu<br>
 Lorne Hobbs<br>
 Marten Claridge<br>
+Michael Fontana<br>
 Niels van Kruiningen<br>
 Niyi Afelumo<br>
 Petr Smrz<br>
@@ -47,6 +52,8 @@ Richard Tolbert<br>
 Robert Bailey<br>
 Robert Nace<br>
 Ross Green<br>
+Tata Parker<br>
+Vera Rankins<br>
 Warren Avny<br>
 William Griffith<br>
 Wolbe, Inc.<br><br>
