--- a/app/resource/Credits.html
+++ b/app/resource/Credits.html
@@ -52,6 +52,7 @@ Richard Tolbert<br>
 Robert Bailey<br>
 Robert Nace<br>
 Ross Green<br>
+Ryoichi Morita<br>
 Tata Parker<br>
 Vera Rankins<br>
 Warren Avny<br>
