updated donor list

--- a/app/resource/Credits.html
+++ b/app/resource/Credits.html
@@ -8,33 +8,36 @@
 
 <b>Donations</b> : If you find cDock useful, please consider <a href="http://goo.gl/vF92sf">making a donation</a> to support further development.<br><br>
 
-<b>Tutorials</b> : Need help with cDock? Check out these informative videos.<br>
-<a href="https://www.youtube.com/watch?v=wVwQ8sKsdtE">Video 1</a><br>
-<a href="https://www.youtube.com/watch?v=_TgVALvy00Y">Video 2</a><br><br>
-
 <b>Donors</b> : <i>Many thanks go to all those who have been kind enough to donate money in support of this project:</i><br><br>
 4LE Media, L.L.C.<br>
 Anonymous x1<br>
 Anthony Giusti<br>
 Barton Poulson<br>
 Bree Lassen<br>
+Brian Sweeney<br>
 Carles Escudero Diaz<br>
 Chen Yap<br>
 Christine Billings<br>
 Connie Spencer<br>
+Daniel Tullis<br>
 David Bluestone<br>
 David Hirsh<br>
+Denis Stewart<br>
 Denny Forster<br>
 Edgar Kraus<br>
 Gregory A Petsko<br>
 Gregory Pitta<br>
 Hans Henningsson<br>
+Howard Dym<br>
 Howard Katz<br>
+James Powell<br>
 Jan Wade<br>
+Jean-Francois Mayer<br>
 Jean-Guy Niquet<br>
 Jim Elsworth<br>
 Johan Sorensson<br>
 John Knoerr<br>
+John Lustman<br>
 John Mueller<br>
 Julie Lindsey-Halls<br>
 Justin Dailey<br>
@@ -42,6 +45,8 @@ Kennett Sargent<br>
 Lei Feng<br>
 Leslie Layton<br>
 Li Lu<br>
+Liam o'sullivan<br>
+Liu Chun Yin Arthur<br>
 Lorne Hobbs<br>
 Marten Claridge<br>
 Michael Fontana<br>
@@ -54,10 +59,12 @@ Robert Nace<br>
 Ross Green<br>
 Ryoichi Morita<br>
 Tata Parker<br>
+Trang Tran<br>
 Vera Rankins<br>
 Warren Avny<br>
 William Griffith<br>
-Wolbe, Inc.<br><br>
+Wolbe, Inc.<br>
+吳 駿維<br><br>
 		
 <b>Credits</b> :<br>
 <a href="https://github.com/norio-nomura/EasySIMBL">SIMBL</a><br>
