updated donor list

--- a/app/resource/Credits.html
+++ b/app/resource/Credits.html
@@ -12,21 +12,30 @@
 
 <b>Donors</b> : <i>Many thanks go to all those who have been kind enough to donate money in support of this project:</i><br><br>
 4LE Media, L.L.C.<br>
+Ang Edwin<br>
 Anonymous x1<br>
 Anthony Giusti<br>
+Barry Chiarello<br>
 Barton Poulson<br>
 Bree Lassen<br>
 Brian Sweeney<br>
 Carles Escudero Diaz<br>
+Charlie Lembach<br>
 Chen Yap<br>
 Christine Billings<br>
+Christopher Focer<br>
+Chuck Freiman<br>
 Connie Spencer<br>
 Daniel Tullis<br>
 David Bluestone<br>
 David Hirsh<br>
 Denis Stewart<br>
 Denny Forster<br>
+Donation<br>
 Edgar Kraus<br>
+Ekvia Ltd<br>
+erick genaudet<br>
+Frank Thurber<br>
 Gregory A Petsko<br>
 Gregory Pitta<br>
 Hans Henningsson<br>
@@ -43,6 +52,7 @@ John Lustman<br>
 John Mueller<br>
 Julie Lindsey-Halls<br>
 Justin Dailey<br>
+Ken Hoyle<br>
 Kennett Sargent<br>
 Lei Feng<br>
 Leslie Layton<br>
@@ -50,21 +60,32 @@ Li Lu<br>
 Liam o'sullivan<br>
 Liu Chun Yin Arthur<br>
 Lorne Hobbs<br>
+Mark Gonzales<br>
 Marten Claridge<br>
 Michael Fontana<br>
+Mike Bessy<br>
 Niels van Kruiningen<br>
 Niyi Afelumo<br>
+Noelle De Guzman<br>
+Paul Babadi Bamba<br>
+Pete Askew<br>
+peter faiman<br>
 Petr Smrz<br>
+Richard Nolan<br>
 Richard Tolbert<br>
+Robert B. Bass<br>
 Robert Bailey<br>
 Robert Nace<br>
 Ross Green<br>
 Ryoichi Morita<br>
+Samir Benmammar<br>
 Tata Parker<br>
+Thai Tran<br>
 Trang Tran<br>
 Vera Rankins<br>
 Warren Avny<br>
 William Griffith<br>
+William M Sorem<br>
 Wolbe, Inc.<br>
 吳 駿維<br><br>
 		
