--- a/app/resource/Credits.html
+++ b/app/resource/Credits.html
@@ -8,8 +8,6 @@
 
 <b>Donations</b> : If you find cDock useful, please consider <a href="http://goo.gl/vF92sf">making a donation</a> to support further development.<br><br>
 
-<img src="XzEEzPX.gif" alt="HTML5 Icon" width="200" height="200"><br><br>
-
 <b>Donors</b> : <i>Many thanks go to all those who have been kind enough to donate money in support of this project:</i><br><br>
 4LE Media, L.L.C.<br>
 Ang Edwin<br>
@@ -99,7 +97,9 @@ Wolbe, Inc.<br>
 <a href="http://sveinbjorn.org/platypus">Platypus</a><br>
 <a href="http://hasseg.org/trash">Trash Script</a><br>
 <a href="https://github.com/petroules/CocoaBackports">System Version Check</a><br>
-<a href="http://scafer31000.deviantart.com">Icon</a>
+<a href="http://scafer31000.deviantart.com">Icon</a><br><br>
+
+<img src="XzEEzPX.gif" alt="HTML5 Icon" width="200" height="200">
 
 </p>
 </body>
