--- a/app/resource/Credits.html
+++ b/app/resource/Credits.html
@@ -8,31 +8,41 @@
 
 <b>Donations</b> : If you find cDock useful, please consider <a href="http://goo.gl/vF92sf">making a donation</a> to support further development.<br><br>
 
+<b>Translations</b> : Thanks to all who have helped provide localizations for cDock
+Wolfgang Baird - English
+
+
 <b>Donors</b> : <i>Many thanks go to all those who have been kind enough to donate money in support of this project:</i><br><br>
 4LE Media, L.L.C.<br>
 Ang Edwin<br>
-Anonymous x1<br>
+Anonymous<br>
 Anthony Giusti<br>
+Aron Yoffe<br>
 Barry Chiarello<br>
 Barton Poulson<br>
+Blair Chivers<br>
 Bree Lassen<br>
 Brian Sweeney<br>
 Carles Escudero Diaz<br>
+Cat N Co<br>
 Charlie Lembach<br>
 Chen Yap<br>
 Christine Billings<br>
 Christopher Focer<br>
 Chuck Freiman<br>
+Chuck Freiman<br>
+Cihan Deribas<br>
 Connie Spencer<br>
 Daniel Tullis<br>
 David Bluestone<br>
 David Hirsh<br>
-Denis Stewart<br>
+David Kaminsky<br>
+Denis Stewar<br>
 Denny Forster<br>
 Donation<br>
 Edgar Kraus<br>
 Ekvia Ltd<br>
-erick genaudet<br>
+erick genaude<br>
 Frank Thurber<br>
 Gregory A Petsko<br>
 Gregory Pitta<br>
@@ -41,24 +51,29 @@ Howard Dym<br>
 Howard Katz<br>
 James Powell<br>
 Jan Wade<br>
+Jay Gould<br>
 Jean-Francois Mayer<br>
-Jean-Guy Niquet<br>
+Jean-Guy Nique<br>
 Jim Elsworth<br>
 Johan Sorensson<br>
 John Knoerr<br>
 John Lustman<br>
+John McGrew<br>
 John Mueller<br>
+John Parr<br>
 Julie Lindsey-Halls<br>
 Justin Dailey<br>
 Ken Hoyle<br>
-Kennett Sargent<br>
+Kennett Sargen<br>
 Lei Feng<br>
 Leslie Layton<br>
 Li Lu<br>
 Liam o'sullivan<br>
 Liu Chun Yin Arthur<br>
 Lorne Hobbs<br>
+Marc Laurendeau<br>
 Mark Gonzales<br>
+Mark Warren<br>
 Marten Claridge<br>
 Michael Fontana<br>
 Mike Bessy<br>
@@ -69,21 +84,25 @@ Paul Babadi Bamba<br>
 Pete Askew<br>
 peter faiman<br>
 Petr Smrz<br>
+Rainer Kühnel<br>
 Richard Nolan<br>
-Richard Tolbert<br>
+Richard Tolber<br>
 Robert B. Bass<br>
 Robert Bailey<br>
 Robert Nace<br>
 Ross Green<br>
 Ryoichi Morita<br>
 Samir Benmammar<br>
+Sean Greenwood<br>
 Tata Parker<br>
 Thai Tran<br>
 Trang Tran<br>
+Ulvi Kerimli<br>
 Vera Rankins<br>
 Warren Avny<br>
 William Griffith<br>
 William M Sorem<br>
+Winston Maxwell<br>
 Wolbe, Inc.<br>
 吳 駿維<br><br>
 		
