--- a/app/resource/Credits.html
+++ b/app/resource/Credits.html
@@ -8,9 +8,10 @@
 
 <b>Donations</b> : If you find cDock useful, please consider <a href="http://goo.gl/vF92sf">making a donation</a> to support further development.<br><br>
 
-<b>Translations</b> : Thanks to all who have helped provide localizations for cDock
-Wolfgang Baird - English
-
+<b>Translations</b> : <i>Thanks to all who have helped provide localizations for cDock:</i><br><br>
+Wolfgang Baird - English<br>
+Dmitry Kudryashov - Russian, Chinese (Simplified)<br> 
+Mauro Ferreri - Italian<br><br>
 
 <b>Donors</b> : <i>Many thanks go to all those who have been kind enough to donate money in support of this project:</i><br><br>
 4LE Media, L.L.C.<br>
