generic text here

--- a/app/resource/Credits.html
+++ b/app/resource/Credits.html
@@ -10,7 +10,7 @@
 
 <b>Translations</b> : <i>Thanks to all who have helped provide localizations for cDock:</i><br><br>
 Wolfgang Baird - English<br>
-Dmitry Kudryashov - Russian, Chinese (Simplified)<br> 
+Dmitry Kudryashov - Russian, Chinese (Simplified)<br>
 Mauro Ferreri - Italian<br><br>
 
 <b>Donors</b> : <i>Many thanks go to all those who have been kind enough to donate money in support of this project:</i><br><br>
@@ -106,7 +106,7 @@ William M Sorem<br>
 Winston Maxwell<br>
 Wolbe, Inc.<br>
 吳 駿維<br><br>
-		
+
 <b>Credits</b> :<br>
 <a href="https://github.com/norio-nomura/EasySIMBL">SIMBL</a><br>
 <a href="http://mstratman.github.io/cocoadialog/">cocoaDialog</a><br>
@@ -119,7 +119,7 @@ Wolbe, Inc.<br>
 <a href="https://github.com/petroules/CocoaBackports">System Version Check</a><br>
 <a href="http://scafer31000.deviantart.com">Icon</a><br><br>
 
-<img src="XzEEzPX.gif" alt="HTML5 Icon" width="200" height="200">
+<img src="icon.jpg" alt="HTML5 Icon" width="200" height="200">
 
 </p>
 </body>
