generic text here

--- a/app/resource/Credits.html
+++ b/app/resource/Credits.html
@@ -15,6 +15,7 @@ Mauro Ferreri - Italian<br><br>
 
 <b>Donors</b> : <i>Many thanks go to all those who have been kind enough to donate money in support of this project:</i><br><br>
 4LE Media, L.L.C.<br>
+Andrew Howse<br>
 Ang Edwin<br>
 Anonymous<br>
 Anthony Giusti<br>
@@ -41,15 +42,24 @@ David Kaminsky<br>
 Denis Stewar<br>
 Denny Forster<br>
 Donation<br>
+Dr Joel J Levitz<br>
+Edgar Braun<br>
 Edgar Kraus<br>
+Edmund L Windeler Jr<br>
 Ekvia Ltd<br>
-erick genaude<br>
+Eric Ackerman<br>
 Frank Thurber<br>
+Gary T Fields<br>
 Gregory A Petsko<br>
 Gregory Pitta<br>
 Hans Henningsson<br>
+Harvey Rubinstein<br>
+Haydon Enterprises<br>
 Howard Dym<br>
 Howard Katz<br>
+Ian Summers<br>
+Jacqueline Lawson<br>
+James Barley<br>
 James Powell<br>
 Jan Wade<br>
 Jay Gould<br>
@@ -62,6 +72,7 @@ John Lustman<br>
 John McGrew<br>
 John Mueller<br>
 John Parr<br>
+John Scott<br>
 Julie Lindsey-Halls<br>
 Justin Dailey<br>
 Ken Hoyle<br>
@@ -78,12 +89,13 @@ Mark Warren<br>
 Marten Claridge<br>
 Michael Fontana<br>
 Mike Bessy<br>
+Neil Pomeroy<br>
 Niels van Kruiningen<br>
 Niyi Afelumo<br>
 Noelle De Guzman<br>
+Othmar Vetrovetz<br>
 Paul Babadi Bamba<br>
 Pete Askew<br>
-peter faiman<br>
 Petr Smrz<br>
 Rainer Kühnel<br>
 Richard Nolan<br>
@@ -93,8 +105,10 @@ Robert Bailey<br>
 Robert Nace<br>
 Ross Green<br>
 Ryoichi Morita<br>
+Sabine Zimmermann<br>
 Samir Benmammar<br>
 Sean Greenwood<br>
+Stefano Brocco<br>
 Tata Parker<br>
 Thai Tran<br>
 Trang Tran<br>
@@ -105,6 +119,10 @@ William Griffith<br>
 William M Sorem<br>
 Winston Maxwell<br>
 Wolbe, Inc.<br>
+erick genaude<br>
+michael kreiser<br>
+p.r. austin unlimited visions<br>
+peter faiman<br>
 吳 駿維<br><br>
 
 <b>Credits</b> :<br>
