--- a/app/resource/Credits.html
+++ b/app/resource/Credits.html
@@ -17,24 +17,28 @@ Mauro Ferreri - Italian<br><br>
 4LE Media, L.L.C.<br>
 Andrew Howse<br>
 Ang Edwin<br>
-Anonymous<br>
+Anonymous x2<br>
+Anoop Chauhan<br>
 Anthony Giusti<br>
 Aron Yoffe<br>
 Barry Chiarello<br>
 Barton Poulson<br>
 Blair Chivers<br>
-Bree Lassen<br>
 Brian Sweeney<br>
 Carles Escudero Diaz<br>
 Cat N Co<br>
+Charles McKenna<br>
 Charlie Lembach<br>
 Chen Yap<br>
 Christine Billings<br>
+Christoph Bickenbach<br>
 Christopher Focer<br>
 Chuck Freiman<br>
 Chuck Freiman<br>
 Cihan Deribas<br>
 Connie Spencer<br>
+Curtis Jackson<br>
+Daniel Katz<br>
 Daniel Tullis<br>
 David Bluestone<br>
 David Hirsh<br>
@@ -43,11 +47,14 @@ Denis Stewar<br>
 Denny Forster<br>
 Donation<br>
 Dr Joel J Levitz<br>
+Dr. Ralf Mundkowski<br>
 Edgar Braun<br>
 Edgar Kraus<br>
 Edmund L Windeler Jr<br>
 Ekvia Ltd<br>
+Empraxis LLC<br>
 Eric Ackerman<br>
+Erick Genaude<br>
 Frank Thurber<br>
 Gary T Fields<br>
 Gregory A Petsko<br>
@@ -65,6 +72,7 @@ Jan Wade<br>
 Jay Gould<br>
 Jean-Francois Mayer<br>
 Jean-Guy Nique<br>
+Jean-Louis Giavitto<br>
 Jim Elsworth<br>
 Johan Sorensson<br>
 John Knoerr<br>
@@ -77,6 +85,7 @@ Julie Lindsey-Halls<br>
 Justin Dailey<br>
 Ken Hoyle<br>
 Kennett Sargen<br>
+Knapp Steven<br>
 Lei Feng<br>
 Leslie Layton<br>
 Li Lu<br>
@@ -88,29 +97,41 @@ Mark Gonzales<br>
 Mark Warren<br>
 Marten Claridge<br>
 Michael Fontana<br>
+Michael Grisolia<br>
+Michael Kreiser<br>
 Mike Bessy<br>
 Neil Pomeroy<br>
 Niels van Kruiningen<br>
 Niyi Afelumo<br>
 Noelle De Guzman<br>
 Othmar Vetrovetz<br>
+P.R. Austin unlimited visions<br>
 Paul Babadi Bamba<br>
 Pete Askew<br>
+Peter Faiman<br>
+Peter Slavcheff<br>
 Petr Smrz<br>
 Rainer Kühnel<br>
+Richard Irecky<br>
 Richard Nolan<br>
 Richard Tolber<br>
 Robert B. Bass<br>
 Robert Bailey<br>
 Robert Nace<br>
+Robert Poland<br>
+Ron Franks<br>
 Ross Green<br>
 Ryoichi Morita<br>
 Sabine Zimmermann<br>
 Samir Benmammar<br>
+Sanae Kikuchi<br>
 Sean Greenwood<br>
+Self-Health Education, Inc.<br>
 Stefano Brocco<br>
 Tata Parker<br>
+Terje Christiansen<br>
 Thai Tran<br>
+Tom Lloyd<br>
 Trang Tran<br>
 Ulvi Kerimli<br>
 Vera Rankins<br>
@@ -119,21 +140,21 @@ William Griffith<br>
 William M Sorem<br>
 Winston Maxwell<br>
 Wolbe, Inc.<br>
-erick genaude<br>
-michael kreiser<br>
-p.r. austin unlimited visions<br>
-peter faiman<br>
+tuesday healy<br>
 吳 駿維<br><br>
 
 <b>Credits</b> :<br>
 <a href="https://github.com/norio-nomura/EasySIMBL">SIMBL</a><br>
 <a href="http://mstratman.github.io/cocoadialog/">cocoaDialog</a><br>
 <a href="http://www.bluem.net/en/mac/pashua/">pashua</a><br>
+<a href="http://sveinbjorn.org/platypus">Platypus</a><br><br>
+
 <a href="http://cooviewerzoom.web.fc2.com/blackdock.html">BlackDock</a><br>
 <a href="https://github.com/b3ll/DarkDock">DarkDock</a><br>
+<a href="https://github.com/alexzielenski/dockify">Dockify</a><br>
+<a href="https://github.com/mstg/Modck">Modck</a><br><br>
+
 <a href="http://cooviewerzoom.web.fc2.com/colorfulsidebar.html">ColorfulSidebar</a><br>
-<a href="http://sveinbjorn.org/platypus">Platypus</a><br>
-<a href="http://hasseg.org/trash">Trash Script</a><br>
 <a href="https://github.com/petroules/CocoaBackports">System Version Check</a><br>
 <a href="http://scafer31000.deviantart.com">Icon</a><br><br>
 
