--- a/app/resource/Credits.html
+++ b/app/resource/Credits.html
@@ -4,7 +4,7 @@
 
 <b>Programming &amp; Design</b> : Wolfgang Baird (<a href="mailto:aguywithlonghair@gmail.com">E-mail</a>)<br><br>
 
-<b>Report a bug</b> : <a href="https://sourceforge.net/p/cdock/tickets/new/">Click here</a><br><br>
+<b>Report a bug</b> : <a href="https://github.com/w0lfschild/cDock/issues/new">Click here</a><br><br>
 
 <b>Donations</b> : If you find cDock useful, please consider <a href="http://goo.gl/vF92sf">making a donation</a> to support further development.<br><br>
 
